# LANGGRAPH-TUTORIAL

./: pyproject.toml  requirements.txt
Chatbot/: 9_basic_chatbot.ipynb  langgraph_backend.py  streamlit_frontend.py  streamlit_frontend_streaming.py
Conditional_Workflow/: 6_quadratic_equation_workflow.ipynb  7_review_reply_workflow.ipynb
Iterative_Workflow/: 8_X_post_generator.ipynb
Parallel_Workflow/: 4_batsman_workflow.ipynb  5_UPSC_essay_workflow.ipynb
Persistence/: 10_persistence.ipynb
Sequential_Workflow/: 0_test_installation.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb
